--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,51 +1,46 @@
 version: "3.8"
 services:
-  spotify_app:
-    container_name: spotify_app
+  app:
     build:
       context: .
-      dockerfile: ./docker/php/Dockerfile
-    expose:
-      - 9000
+      dockerfile: Dockerfile
+    image: laravel_app
+    container_name: laravel_app
+    restart: unless-stopped
+    working_dir: /var/www
     volumes:
-      - .:/usr/src/app
-      - ./public:/usr/src/app/public
-    depends_on:
-      - spotify_app
+      - .:/var/www
     networks:
-      - app_network
-  soptify_nginx:
-    container_name: soptify_nginx
-    build:
-      context: .
-      dockerfile: ./docker/nginx/Dockerfile
-    volumes:
-      - ./public:/usr/src/app/public
-    ports:
-      - 8000:80
-    depends_on:
-      - spotify_app
+      - app-network
+    env_file:
+      - .env # این خط اضافه می‌شود
     environment:
-      NGINX_FPM_HOST: spotify_app
-      NGINX_ROOT: /usr/src/app/public
-    networks:
-      - app_network
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_DATABASE=${DB_DATABASE}
+      - DB_USERNAME=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
 
-  spotify:
-    container_name: spotify
-    image: mysql:8.0.20
-    restart: always
-    volumes:
-      - ./storage/db-data:/var/lib/mysql
-    ports:
-      - 3306:3306
+  db:
+    image: mysql:8.0
+    container_name: laravel_db
+    restart: unless-stopped
     environment:
-      MYSQL_DATABASE: blog
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - "3306:3306"
+    volumes:
+      - dbdata:/var/lib/mysql
     networks:
-      - app_network
+      - app-network
+
 networks:
-  app_network:
+  app-network:
     driver: bridge
+
+volumes:
+  dbdata:
+    driver: local
