--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,13 +13,7 @@ services:
     networks:
       - app-network
     env_file:
-      - .env # این خط اضافه می‌شود
-    environment:
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - DB_DATABASE=${DB_DATABASE}
-      - DB_USERNAME=${DB_USERNAME}
-      - DB_PASSWORD=${DB_PASSWORD}
+      - .env
 
   db:
     image: mysql:8.0
@@ -34,6 +28,18 @@ services:
       - "3306:3306"
     volumes:
       - dbdata:/var/lib/mysql
+    networks:
+      - app-network
+
+  nginx:
+    image: nginx:alpine
+    container_name: laravel_nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+    volumes:
+      - .:/var/www
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - app-network
 
