chaning the dockerfile and nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,28 @@
-server {
-    listen 80;
-    index index.php index.html;
-    server_name localhost;
-    root /var/www/public;
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
+include /etc/nginx/modules-enabled/*.conf;
 
-    location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
+events {
+    worker_connections 768;
+}
 
-    location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_pass app:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_buffers 16 16k;
-        fastcgi_buffer_size 32k;
-    }
+http {
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
 
-    location ~ /\.ht {
-        deny all;
-    }
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    gzip on;
+    gzip_disable "msie6";
+
+    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/sites-enabled/*;
 }
