--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,39 +1,42 @@
 
-FROM php:8.1-fpm
+FROM php:8.1-fpm  as laravel_base
 
+# Base PHP Image
+FROM php:7.4-fpm as laravel_base
 
 RUN apt-get update && apt-get install -y \
-    build-essential \
-    libpng-dev \
-    libjpeg62-turbo-dev \
-    libfreetype6-dev \
-    locales \
-    zip \
-    jpegoptim optipng pngquant gifsicle \
-    vim \
-    unzip \
     git \
+    zip \
     curl \
-    && docker-php-ext-configure gd --with-freetype --with-jpeg \
-    && docker-php-ext-install pdo pdo_mysql gd
+    sudo \
+    unzip \
+    libicu-dev \
+    libbz2-dev \
+    libpng-dev \
+    libjpeg-dev \
+    libmcrypt-dev \
+    libreadline-dev \
+    libfreetype6-dev \
+    g++ \
+    nginx
 
+RUN docker-php-ext-install \
+    bz2 \
+    intl \
+    iconv \
+    bcmath \
+    opcache \
+    calendar \
+    pdo_mysql
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+COPY . /var/www/tmp
+RUN cd /var/www/tmp && composer install --no-dev
 
 
-COPY . /var/www
+FROM laravel_base
+COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY ./vhost.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
 
-
-WORKDIR /var/www
-
-
-RUN chown -R www-data:www-data /var/www \
-    && chmod -R 775 /var/www/storage \
-    && chmod -R 775 /var/www/bootstrap/cache
-
-
-
-
-CMD ["php-fpm"]
-
-EXPOSE 9000
+CMD service php7.4-fpm start && nginx -g "daemon off;"
