new docker file

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,42 +1,38 @@
+# Use PHP with FPM as the base image
+FROM php:8.2-fpm as web
 
-FROM php:8.1-fpm  as laravel_base
-
-# Base PHP Image
-FROM php:7.4-fpm as laravel_base
-
+# Install Additional System Dependencies
 RUN apt-get update && apt-get install -y \
-    git \
+    libzip-dev \
     zip \
-    curl \
-    sudo \
-    unzip \
-    libicu-dev \
-    libbz2-dev \
-    libpng-dev \
-    libjpeg-dev \
-    libmcrypt-dev \
-    libreadline-dev \
-    libfreetype6-dev \
-    g++ \
     nginx
 
-RUN docker-php-ext-install \
-    bz2 \
-    intl \
-    iconv \
-    bcmath \
-    opcache \
-    calendar \
-    pdo_mysql
+# Clear cache
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
-COPY . /var/www/tmp
-RUN cd /var/www/tmp
-RUN composer install 
+# Install PHP extensions
+RUN docker-php-ext-install pdo_mysql zip
 
+# Set the working directory
+WORKDIR /var/www/html
 
-FROM laravel_base
-COPY ./nginx.conf /etc/nginx/nginx.conf
+# Copy the application code
+COPY . /var/www/html
+
+# Install composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+# Install project dependencies
+RUN composer install
+
+# Set permissions
+RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache
+
+# Copy Nginx configuration
+COPY ./nginx/nginx.conf /etc/nginx/nginx.conf
+
+# Expose port 80
 EXPOSE 80
 
-CMD service php7.4-fpm start && nginx -g "daemon off;"
+# Start Nginx and PHP-FPM
+CMD ["sh", "-c", "nginx && php-fpm"]
