--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,20 @@
 server {
     listen 80;
-    index index.php index.html;
+    server_name your_domain.com;
+
     root /var/www/html/public;
+    index index.php index.html index.htm;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
-        try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        include snippets/fastcgi-php.conf;
         fastcgi_pass app:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    location ~ /\.ht {
+        deny all;
     }
 }
